Bug Fix, wrong size size bar

--- a/pokematic-frontend/src/pages/board-components/GoalSideBar.css
+++ b/pokematic-frontend/src/pages/board-components/GoalSideBar.css
@@ -25,6 +25,7 @@
 
 .AllTasks {
     padding-top: 70px;
+    width: 225px;
     font-size: 35px !important; 
 }
 
